--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,10 @@
 	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+		integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="shortcut icon" href="Logo-pequeno.ico" type="image/x-icon" />
 	<script src="https://wzrd.in/standalone/copy-to-clipboard@latest" async></script>
 	<meta charset="utf-8" />
@@ -17,5 +19,20 @@
 <body style="background-color: #202020;">
 	<div id="root"></div>
 </body>
+<script type="text/javascript">
+	// <![CDATA[
+	var ttChatLoaderS = document.createElement('script');
+	document.tomticketChatLoaderScriptVersion = 2;
+	ttChatLoaderS.src = 'https://payshare.tomticket.com/scripts-chat/chat.min.js'
+	+ '?id=EP51146'
+	+ '&account=3273344P09122020022122'
+	+ '&autoOpen=0'
+	+ '&hideWhenOffline=0'
+	+ '&d=payshare'
+	+ '&ts=' + new Date().getTime()
+	+ '&ref=' + encodeURIComponent(document.URL);
+	document.body.appendChild(ttChatLoaderS);
+	//]]>
+	</script>
 
 </html>
